--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/forum
 spring.datasource.username=root
 spring.datasource.password=MT8246a
+
+server.error.include-stacktrace=never
