Adding properties to view JPA activities in the console

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=MT8246a
 
 server.error.include-stacktrace=never
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
